dhall/tests/type-errors/unit/LetWithWrongAnnotation.txt
Type error: error: annot mismatch: (True : Bool) : Natural
 --> <current file>:1:8
  |
1 | let x : Natural = True in True
  |         ^^^^^^^ annot mismatch: (True : Bool) : Natural
  |
